--- a/css/style.css
+++ b/css/style.css
@@ -150,7 +150,7 @@ section h1 {
     margin-top: -250px;
     padding-top: 270px;
     padding-bottom: 80px;
-    background-image: url("D:/fawwaz/web portofolio/img/bg1.png");
+    background-image: url("img/bg1.png");
     background-repeat: no-repeat;
     background-size: contain;
     background-position: top;
@@ -165,7 +165,7 @@ section h1 {
     margin-top: 0px;
     padding-top: 300px;
     padding-bottom: 80px;
-    background-image: url("D:/fawwaz/web portofolio/img/bg3.png");
+    background-image: url("img/bg3.png");
     background-repeat: no-repeat;
     background-size: contain;
     background-position: top;
@@ -176,7 +176,7 @@ section h1 {
     margin-top: 0px;
     padding-top: 270px;
     padding-bottom: 80px;
-    background-image: url("D:/fawwaz/web portofolio/img/ng4.png");
+    background-image: url("img/ng4.png");
     background-repeat: no-repeat;
     background-size: contain;
     background-position: top;
